--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,8 @@
 /.editorconfig      export-ignore
 /.gitattributes     export-ignore
+/.github            export-ignore
 /.gitignore         export-ignore
-/.scrutinizer.yml   export-ignore
-/.travis.yml        export-ignore
+/.styleci.yml       export-ignore
 /phpunit.xml.dist   export-ignore
+/art                export-ignore
 /tests              export-ignore
