--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "illuminate/contracts": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
+        "laravel/pint": "^1.13",
         "nunomaduro/collision": "^7.10",
         "orchestra/testbench": "^6.0|^7.0|^8.0",
         "phpunit/phpunit": "^10.1"
@@ -44,7 +45,8 @@
     },
     "scripts": {
         "test": "vendor/bin/testbench package:test --no-coverage",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+        "format": "vendor/bin/pint"
     },
     "config": {
         "sort-packages": true
