Add Pint to GitHub actions. Closes #2

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -43,3 +43,6 @@ jobs:
 
       - name: Execute tests
         run: vendor/bin/phpunit --no-coverage
+
+      - name: Run Pint
+        run: vendor/bin/pint
