--- a/.gitattributes
+++ b/.gitattributes
@@ -4,5 +4,6 @@
 /.gitignore         export-ignore
 /.styleci.yml       export-ignore
 /phpunit.xml.dist   export-ignore
+/pint.json          export-ignore
 /art                export-ignore
 /tests              export-ignore
