--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "require": {
         "php": "^8.1",
-        "getbrevo/brevo-php": "^1.0",
+        "getbrevo/brevo-php": "^1.0|^2.0",
         "illuminate/contracts": "^8.0|^9.0|^10.0|^11.0"
     },
     "require-dev": {
