--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,12 @@
     "require": {
         "php": "^8.1",
         "getbrevo/brevo-php": "^1.0|^2.0",
-        "illuminate/contracts": "^8.0|^9.0|^10.0|^11.0"
+        "illuminate/contracts": "^8.0|^9.0|^10.0|^11.0|^12.0"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
         "nunomaduro/collision": "^7.0|^8.0",
-        "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0",
+        "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0|^10.0",
         "phpunit/phpunit": "^10.1|^11.0"
     },
     "autoload": {
